--- a/AccelerProject/index.html
+++ b/AccelerProject/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale = 1, user-scalable=no">
 	<title>Flot</title>
-	<script src="./lib/flot/excanvas.min.js"></script>
-	<script src="./lib/flot/jquery.js"></script>
-	<script src="./lib/flot/jquery.flot.js"></script>
-	<script src="./lib/flot/jquery.flot.time.js"></script>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -19,6 +16,10 @@
 		<input type="button" id="recordButton" value="Start"></input>
 		<input type="button" id="showButton" value="Show Record"></input>
 	</div>
+	<script src="./lib/flot/excanvas.min.js"></script>
+	<script src="./lib/flot/jquery.js"></script>
+	<script src="./lib/flot/jquery.flot.js"></script>
+	<script src="./lib/flot/jquery.flot.time.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 </html>
