Load and Save Buttons

--- a/AccelerProject/index.html
+++ b/AccelerProject/index.html
@@ -14,7 +14,9 @@
 	<p id="labelz" class="GraphLabel" align="center">Z:</p>
 	<div id="controlDiv">
 		<input type="button" id="recordButton" value="Start"></input>
-		<input type="button" id="showButton" value="Show Record"></input>
+		<input type="button" id="showButton" value="Show Record" disabled></input>
+		<input type="button" id="saveButton" value="Save Record" disabled></input>
+		<input type="button" id="loadButton" value="Load Record"></input>
 	</div>
 	<script src="./lib/flot/excanvas.min.js"></script>
 	<script src="./lib/flot/jquery.js"></script>
